fix blue highlight on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ code {
   padding: 1vh;
   font-size: medium;
   font-weight: bold;
-  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
+  -webkit-tap-highlight-color:  transparent; 
 }
 
 .header{
